src/test/resources/json/invalid_inputs/invalid_json.json.except
Unexpected character ('X' (code 88)): was expecting double-quote to start field name